2003-09-04  Carl Worth  <cworth@isi.edu>

	* util/cairo-api-update: Added script to update source code using
	Cairo to the latest API.

	* configure.in (CAIRO_VERSION): Bumped version to 0.1.1

	* src/cairoint.h (DEPRECATE): Added magic DEPRECATE macro which
	provides an asm-based alias for old function names. This works on
	ELF systems with gcc version >= 2.

	* src/cairo.h (cairo_get_status_string): Deprecated all
	cairo_get_* names in favor of cairo_current_*. The deprecated
	function names will trigger either a warning or a link error, but
	in both cases with a useful message giving both the old and new
	name of the function. Three of the function name changes are
	different than the single word substituion:
		cairo_get_current_color	-> cairo_current_color
		cairo_get_status	-> cairo_status
		cairo_get_status_string	-> cairo_status_string
	
2003-09-03  Carl Worth  <cworth@east.isi.edu>

	* src/cairo.h: Change cairo_get_matrix interface to accept a
	cairo_matrix_t* rather than 6 double*.

	* src/cairo.c (cairo_get_matrix): Add implementation of cairo_get_matrix.

2003-08-29  Carl Worth  <cworth@isi.edu>

	* src/cairo_surface.c (_cairo_surface_composite): Optimized case
	where src is in memory, dst is on server, and mask is NULL. Will
	now do a single XPutImage rather than the painful
	GetImage/PutImage dance of the general code.

2003-08-28  Carl Worth  <cworth at east.isi.edu>

	* src/cairo_traps.c (_line_segs_intersect_ceil): One more
	increment, (that still won't fix the bug). Added comment point to
	Hobby's paper, (that will fix it).

	* src/cairo_font.c (_cairo_font_resolve_xft_font): Fixed to use
	fabs instead of abs when correcting for negative area expansion.

2003-08-28  Keith Packard <keithp@keithp.com
	* src/cairo_font.c: font pixel size is always non-negative

2003-08-26  Carl Worth  <cworth@isi.edu>

	* src/cairoint.h: Added missing underscores to several internal
	functions.
	* src/cairo_font.c: 
	* src/cairo_gstate.c: 
	* src/cairo_matrix.c: 